RESOLVED FIXED218307
[TextureMapper] Replica layers don't blend correctly because computeOverlapRegions doesn't take TextureMapperPaintOptions::transform into account
https://bugs.webkit.org/show_bug.cgi?id=218307
Summary [TextureMapper] Replica layers don't blend correctly because computeOverlapRe...
Fujii Hironori
Reported 2020-10-28 14:35:58 PDT
Created attachment 412572 [details] test case [TextureMapper] Replica layers don't blend correctly because computeOverlapRegions doesn't take TextureMapperPaintOptions::transform into account
Attachments
test case (766 bytes, text/html)
2020-10-28 14:35 PDT, Fujii Hironori
no flags
[Screenshot] GTK, r269084 (18.33 KB, image/png)
2020-10-28 14:42 PDT, Fujii Hironori
no flags
WIP patch (4.83 KB, patch)
2020-10-28 19:22 PDT, Fujii Hironori
no flags
test case (double reflections) (943 bytes, text/html)
2020-10-28 19:39 PDT, Fujii Hironori
no flags
test case (with backdrop filter) (1.01 KB, text/html)
2020-10-28 19:50 PDT, Fujii Hironori
no flags
WIP patch (4.91 KB, patch)
2020-10-28 21:42 PDT, Fujii Hironori
no flags
Patch (11.30 KB, patch)
2020-10-28 23:07 PDT, Fujii Hironori
no flags
Patch (11.30 KB, patch)
2020-10-29 01:04 PDT, Fujii Hironori
no flags
Patch (11.38 KB, patch)
2020-10-29 13:23 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2020-10-28 14:42:50 PDT
Created attachment 412573 [details] [Screenshot] GTK, r269084
Fujii Hironori
Comment 2 2020-10-28 19:22:45 PDT
Created attachment 412604 [details] WIP patch
Fujii Hironori
Comment 3 2020-10-28 19:39:04 PDT
Created attachment 412608 [details] test case (double reflections)
Fujii Hironori
Comment 4 2020-10-28 19:50:46 PDT
Created attachment 412609 [details] test case (with backdrop filter)
Fujii Hironori
Comment 5 2020-10-28 21:42:19 PDT
Created attachment 412612 [details] WIP patch
Fujii Hironori
Comment 6 2020-10-28 23:07:46 PDT
Fujii Hironori
Comment 7 2020-10-29 01:04:25 PDT
Fujii Hironori
Comment 8 2020-10-29 13:23:50 PDT
Fujii Hironori
Comment 9 2020-10-30 13:27:39 PDT
Comment on attachment 412678 [details] Patch Clearing flags on attachment: 412678 Committed r269204: <https://trac.webkit.org/changeset/269204>
Fujii Hironori
Comment 10 2020-10-30 13:27:42 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2020-10-30 13:28:18 PDT
Note You need to log in before you can comment on or make changes to this bug.